Less | Add Flexslider theme (WIP) Less | Fix Header on mobile devices Less | Add custom theme for home slider  JS | Add Main slider initialization  Static | Add slider on homepage

--- a/src/less/auto-car/main.less
+++ b/src/less/auto-car/main.less
@@ -303,6 +303,7 @@ img.pull-left {
 
     &:focus {
       .box-shadow(none);
+      border-color: @brand-primary;
     }
   }
 
@@ -315,6 +316,10 @@ img.pull-left {
     border-radius: 0px;
     padding: @padding-base-vertical @padding-base-horizontal;
     .box-shadow(none);
+
+    &:hover{
+      color: @brand-primary;
+    }
   }
 }
 
@@ -699,310 +704,102 @@ img.pull-left {
 /* ======= SLIDERS ======= */
 
 /* Main slider */
-
 .main-slider {
   overflow: hidden;
-  &:before {
-    position: absolute;
-    bottom: -3vw;
-    width: 50%;
-    height: 8vw;
-    background-color: #f5f5f5;
-    z-index: 101;
-    content: '';
-    left: 0;
-    transform: skewY(4.5deg);
+
+  /* Caption
+  *********************************/
+  .slides {
+    li {
+      position: relative;
+    }
   }
-  &:after {
+
+  .flex-caption {
     position: absolute;
-    bottom: -3vw;
-    width: 50%;
-    height: 8vw;
-    background-color: #f5f5f5;
-    z-index: 101;
-    content: '';
-    right: 0;
-    transform: skewY(-4.5deg);
-  }
-}
-
-.main-slider__item {
-  position: relative;
-  margin-bottom: 50px;
-}
-
-.iviewSlider {
-  &:after {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 100;
-    content: '';
-  }
-}
-
-.main-slider__title {
-  font-size: 40px;
-  font-weight: 700;
-  color: @white;
-  text-transform: uppercase;
-}
-
-.main-slider__subtitle {
-  margin-bottom: 25px;
-  font-family: @font-family-Raleway;
-  font-size: 26px;
-  font-weight: 500;
-}
-
-.main-slider__text {
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.main-slider__price {
-  display: inline-block;
-  font-size: 36px;
-  font-weight: 500;
-  vertical-align: middle;
-}
-
-.main-slider__link {
-  display: inline-block;
-  width: 36px;
-  height: 38px;
-  margin-top: 5px;
-  margin-left: 20px;
-  padding-top: 8px;
-  vertical-align: middle;
-  transform: skewX(-16deg);
-  text-align: center;
-  .icon {
+    bottom: 0px;
+    left: 0px;
+    max-width: 40%;
+    padding: 20px 20px 120px;
+    margin-left: 12vw;
+    display: inline-block;
     font-size: 15px;
     color: @white;
-    transform: skewX(16deg);
-  }
-}
+    background: rgba(0, 0, 0, 0.6);
 
-.main-slider__btn {
-  display: inline-block;
-  padding: 7px 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  transform: skewX(16deg);
-}
-
-.main-slider__btn_inner {
-  display: inline-block;
-  width: 120px;
-  font-family: @font-family-Ubuntu;
-  color: @white;
-  transform: skewX(-16deg);
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.slider-services {
-  height: 410px;
-  margin-top: 60px;
-  margin-bottom: 25px;
-}
-
-.slider-grid {
-  margin-top: 55px;
-}
-
-.slider-grid__inner {
-  position: relative;
-  margin-bottom: 30px;
-  color: @white;
-  &:hover {
-    .slider-grid__hover {
-      opacity: 1;
-    }
-    .slider-grid__name {
-      background-color: rgba(0, 0, 0, 0);
+    .btn-main {
+      &:hover {
+        color: @white;
+        text-decoration: none;
+      }
     }
   }
-}
 
-.slider-grid__name {
-  display: inline-block;
-  font-family: @font-family-Raleway;
-  font-weight: 600;
-  background-color: rgba(0, 0, 0, 0.7);
-  transition: all 0.3s;
-}
+  .main-slider-title {
+    font-size: 40px;
+    font-weight: 700;
+    color: @white;
+    text-transform: uppercase;
 
-.slider-grid__inner_mod-b {
-  .slider-grid__name {
-    position: absolute;
-    bottom: 0;
-    z-index: 10;
-    padding: 10px 20px;
-    font-size: 14px;
+
   }
-  .slider-grid__price {
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
-    padding: 4px 13px;
-    font-size: 15px;
+
+  .main-slider-subtitle {
+    margin-bottom: 25px;
+    font-family: @font-family-Raleway;
+    font-size: 26px;
     font-weight: 500;
   }
-}
 
-.slider-grid__wrap-name {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.slider-grid__hover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  opacity: 0;
-  transition: all 0.3s;
-}
-
-.slider-grid__info {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 12px;
-  font-weight: 300;
-  .icon {
-    margin-right: 7px;
-    font-size: 14px;
-  }
-  li {
-    margin-bottom: 3px;
-  }
-}
-
-.slider-grid__btn {
-  position: absolute;
-  top: 20px;
-  left: 26px;
-}
-
-.slider-grid__inner_mod-a {
-  .slider-grid__name {
-    padding: 14px 28px;
+  .main-slider-body {
     font-size: 16px;
-    vertical-align: bottom;
+    font-weight: 400;
   }
-  .slider-grid__price {
+
+  .main-slider-btn {
     display: inline-block;
-    margin-left: -3px;
-    padding: 12px 28px 13px;
-    font-size: 18px;
-    vertical-align: bottom;
-  }
-}
+    padding: 7px 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    transform: skewX(16deg);
 
-.slider-gallery {
-  margin-top: 53px;
-  margin-bottom: 155px;
-}
+    span {
+      display: inline-block;
+      width: 120px;
+      font-family: @font-family-Ubuntu;
+      color: @white;
+      transform: skewX(-16deg);
+      text-align: center;
+      text-transform: uppercase;
+    }
 
-.slider-gallery__item {
-  position: relative;
-  height: 177px;
-  margin: 0 5px;
-  text-align: center;
-  img {
-    width: 100%;
-    height: auto;
-  }
-  .icon {
-    display: block;
-    margin-top: 60px;
-    font-size: 16px;
-  }
-  .icon_video-link {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    width: 50px;
-    height: 50px;
-    margin-top: -25px;
-    margin-left: -25px;
-    padding-top: 17px;
-    font-size: 14px;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.8);
-    .box-shadow(~"0 0 0 5px rgba(255, 255, 255, 0.32)");
-    z-index: 10;
-  }
-}
-
-.slider-gallery__title {
-  margin-top: 16px;
-  font-family: @font-family-Raleway;
-  font-size: 15px;
-  font-weight: 600;
-}
-
-.slider-gallery__link {
-  position: relative;
-  display: block;
-  color: @white;
-  overflow: hidden;
-  &:hover {
-    color: @white;
-    text-decoration: none;
-  }
-}
-
-.slider-gallery__hover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
-  opacity: 0;
-  transition: all 0.3s;
-  &:hover {
-    opacity: 1;
-  }
-}
-
-.owl-item {
-  &:nth-child(4n&+1) {
-    .slider-gallery__link {
-      -webkit-clip-path: polygon(0 0, 100% 0%, 93% 100%, 0% 100%);
-      clip-path: polygon(0 0, 100% 0%, 93% 100%, 0% 100%);
+    &:hover {
+      background-color: @brand-primary;
     }
   }
-  &:nth-child(4n&+2) {
-    .slider-gallery__link {
-      -webkit-clip-path: polygon(7% 0%, 93% 0%, 100% 100%, 0% 100%);
-      clip-path: polygon(7% 0%, 93% 0%, 100% 100%, 0% 100%);
-    }
-  }
-  &:nth-child(4n&+3) {
-    .slider-gallery__link {
-      -webkit-clip-path: polygon(0 0, 100% 0, 93% 100%, 7% 100%);
-      clip-path: polygon(0 0, 100% 0, 93% 100%, 7% 100%);
-    }
-  }
-  &:nth-child(4n&+4) {
-    .slider-gallery__link {
-      -webkit-clip-path: polygon(7% 0, 100% 0, 100% 100%, 0 100%);
-      clip-path: polygon(7% 0, 100% 0, 100% 100%, 0 100%);
-    }
-  }
-}
 
-.slider-reviews {
-  margin-top: 54px;
-  margin-bottom: 154px;
+  .main-slider-price {
+    display: inline-block;
+    font-size: 36px;
+    font-weight: 500;
+    vertical-align: middle;
+  }
+
+  .main-slider-link {
+    display: inline-block;
+    width: 36px;
+    height: 38px;
+    margin-top: 5px;
+    margin-left: 20px;
+    padding-top: 8px;
+    vertical-align: middle;
+    transform: skewX(-16deg);
+    text-align: center;
+    background-color: @brand-primary;
+
+    .icon {
+      font-size: 15px;
+      color: @white;
+      transform: skewX(16deg);
+    }
+  }
 }
