--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -871,6 +871,33 @@
 @hr-border:                   @gray-lighter;
 
 //--------------------------------------------------------------
+//== FlexSlider Variables
+//--------------------------------------------------------------
+
+@flexslider-font-name:                      "Glyphicons Halflings";
+@flexslider-margin:                         0;
+@flexslider-bg:                             transparent;
+@flexslider-border:                         none;
+@flexslider-border-radius:                  0;
+@flexslider-box-shadow-x-axis:              0;
+@flexslider-box-shadow-y-axis:              1px;
+@flexslider-box-shadow-blur:                4px;
+@flexslider-box-shadow-color:               rgba( 0, 0, 0, 0.2 );
+@flexslider-box-shadow-inset:               '';
+@flexslider-viewport-max-height:            2000px;
+@flexslider-viewport-loading-max-height:    300px;
+@flexslider-control-thumbs:                 5px 0 0;
+
+@flexslider-nav-color:                      @white;
+@flexslider-nav-icon-color:                 @white;
+@flexslider-direction-nav-icon-prev:        '\e079';
+@flexslider-direction-nav-icon-next:        '\e080';
+
+@flexslider-pauseplay-icon-color:           @white;
+@flexslider-pauseplay-icon-play:            '\e072';
+@flexslider-pauseplay-icon-pause:           '\e073';
+
+//--------------------------------------------------------------
 //== Theme Variables
 //--------------------------------------------------------------
 
